; ModuleID = '/home/carl/AnghaBench/zstd/lib/legacy/extr_zstd_v06.c_ZSTDv06_decompress_insertDictionary.c'
source_filename = "/home/carl/AnghaBench/zstd/lib/legacy/extr_zstd_v06.c_ZSTDv06_decompress_insertDictionary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZSTDv06_DICT_MAGIC = common dso_local global i64 0, align 8
@dictionary_corrupted = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i8*, i64)* @ZSTDv06_decompress_insertDictionary to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ZSTDv06_decompress_insertDictionary(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i64 @MEM_readLE32(i8* %10)
  store i64 %11, i64* %9, align 8
  %12 = load i64, i64* %9, align 8
  %13 = load i64, i64* @ZSTDv06_DICT_MAGIC, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %20

15:                                               ; preds = %3
  %16 = load i32*, i32** %5, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = load i64, i64* %7, align 8
  %19 = call i32 @ZSTDv06_refDictContent(i32* %16, i8* %17, i64 %18)
  store i64 0, i64* %4, align 8
  br label %46

20:                                               ; preds = %3
  %21 = load i8*, i8** %6, align 8
  %22 = getelementptr inbounds i8, i8* %21, i64 4
  store i8* %22, i8** %6, align 8
  %23 = load i64, i64* %7, align 8
  %24 = sub i64 %23, 4
  store i64 %24, i64* %7, align 8
  %25 = load i32*, i32** %5, align 8
  %26 = load i8*, i8** %6, align 8
  %27 = load i64, i64* %7, align 8
  %28 = call i64 @ZSTDv06_loadEntropy(i32* %25, i8* %26, i64 %27)
  store i64 %28, i64* %8, align 8
  %29 = load i64, i64* %8, align 8
  %30 = call i64 @ZSTDv06_isError(i64 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %35

32:                                               ; preds = %20
  %33 = load i32, i32* @dictionary_corrupted, align 4
  %34 = call i64 @ERROR(i32 %33)
  store i64 %34, i64* %4, align 8
  br label %46

35:                                               ; preds = %20
  %36 = load i8*, i8** %6, align 8
  %37 = load i64, i64* %8, align 8
  %38 = getelementptr inbounds i8, i8* %36, i64 %37
  store i8* %38, i8** %6, align 8
  %39 = load i64, i64* %8, align 8
  %40 = load i64, i64* %7, align 8
  %41 = sub i64 %40, %39
  store i64 %41, i64* %7, align 8
  %42 = load i32*, i32** %5, align 8
  %43 = load i8*, i8** %6, align 8
  %44 = load i64, i64* %7, align 8
  %45 = call i32 @ZSTDv06_refDictContent(i32* %42, i8* %43, i64 %44)
  store i64 0, i64* %4, align 8
  br label %46

46:                                               ; preds = %35, %32, %15
  %47 = load i64, i64* %4, align 8
  ret i64 %47
}

declare dso_local i64 @MEM_readLE32(i8*) #1

declare dso_local i32 @ZSTDv06_refDictContent(i32*, i8*, i64) #1

declare dso_local i64 @ZSTDv06_loadEntropy(i32*, i8*, i64) #1

declare dso_local i64 @ZSTDv06_isError(i64) #1

declare dso_local i64 @ERROR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
